# notion_toolkit

./: .gitignore  Pipfile  README.md  main.py  notion.py  pyproject.toml  quotes_to_authors.py  utils.py  weekly_review_kindle_highlights.py
kindle_highlights/: highlight.py
notion_toolkit/: config.py  notion_helper.py  utils.py
notion_toolkit/export_enhancer/: __main__.py
notion_toolkit/kindle/: main.py  schemas.py
notion_toolkit/kindle_clipping/: __init__.py  __main__.py  model.py  utils.py
notion_toolkit/notiorm/: .model.py.swp  __init__.py  model.py  repo.py  utils.py
notion_toolkit/reference/: __init__.py  book.py  calibre.py  model.py
test/notiorm/: repo_test.py
