[tool.poetry]
name = "notion_toolkit"
version = "0.1.0"
description = "This is a toolkit to automate Notion database maintenance."
authors = ["Rafael Ballestiero <rafa.ballestiero@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
notion = "^0.0.27"
wikipedia = "^1.4.0"
clippings = "^0.6.0"
ipython = "^7.19.0"
ipykernel = "^5.4.2"
fuzzywuzzy = "^0.18.0"
marshmallow = "^3.10.0"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
